# DataTalks-docker-workshop

./: .gitignore  README.md  requirements.txt
docker/: Dockerfile  docker-compose.yaml
docker/pipeline/: main.py  pyproject.toml  requirements.txt  taxi.ipynb  taxi.py
docker/pipeline/.ipynb_checkpoints/: pyproject-checkpoint.toml  taxi-checkpoint.ipynb
docker/pipeline/ny_taxi_postgres_data/: textfile
docker/pipeline/sql/: analytics_queries.sql
terraform/: main.tf  terraform.tfvars.example  variables.tf
