[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nbconvert>=7.16.6",
    "notebook>=7.5.3",
    "pandas>=3.0.0",
    "sqlalchemy",
    "pyarrow>=23.0.0",
    "numpy>=2.4.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pgcli>=4.4.0",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
